--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 theme = "ezhil"
-baseURL = "http://example.org/"
+baseURL = "https://tiaradwptr.netlify.com/"
 languageCode = "en-us"
 title = "tiaradwptr"
 
